@@ -16,20 +16,20 @@ using namespace qpp;
 TEST(qpp_Timer_get_duration, AllTests) {
     using namespace std::chrono;
 
-    Timer<> t1;                              // default duration is double
-    std::this_thread::sleep_for(seconds(1)); // sleep 1 second
-    t1.toc();                                // get current time snap
+    Timer<> t1;                                  // default duration is double
+    std::this_thread::sleep_for(seconds(1));     // sleep 1 second
+    t1.toc();                                    // get current time snap
 
     auto duration_t1_s = t1.get_duration();      // in seconds
     EXPECT_NEAR(duration_t1_s.count(), 1, 0.05); // within 0.05s
 
     auto duration_t1_ms = t1.get_duration<milliseconds>(); // in milli seconds
     EXPECT_NEAR(static_cast<double>(duration_t1_ms.count()), 1000,
-                50); // within 0.05s
+                50);                                       // within 0.05s
 
-    Timer<std::chrono::microseconds> t2;               // in micro seconds
-    std::this_thread::sleep_for(microseconds(100000)); // sleep 0.1 seconds
-    t2.toc();                                          // get current time snap
+    Timer<std::chrono::microseconds> t2;                   // in micro seconds
+    std::this_thread::sleep_for(microseconds(100000));     // sleep 0.1 seconds
+    t2.toc(); // get current time snap
 
     auto duration_t2_micros = t2.get_duration();
     EXPECT_NEAR(static_cast<double>(duration_t2_micros.count()), 100000,
@@ -50,7 +50,7 @@ TEST(qpp_Timer_tic_tics_toc, AllTests) {
     t.toc();                                        // get current time snap
     EXPECT_NEAR(t.tics(), 0, 0.05);                 // within 0.05s
 
-    t.tic(); // reset
+    t.tic();                                        // reset
     // sleep an additional 0.1s (without reseting the timer)
     std::this_thread::sleep_for(milliseconds(100));
     t.toc();                          // get current time snap
@@ -60,7 +60,7 @@ TEST(qpp_Timer_tic_tics_toc, AllTests) {
     t.toc();                          // get current time snap
     EXPECT_NEAR(t.tics(), 0.2, 0.05); // within 0.05s
 
-    t.tic(); // reset
+    t.tic();                          // reset
     std::this_thread::sleep_for(milliseconds(100));
     t.toc();                          // get current time snap
     EXPECT_NEAR(t.tics(), 0.1, 0.05); // within 0.05s
